--- a/src/index.css
+++ b/src/index.css
@@ -48,14 +48,15 @@ body {
 
 .form-control input:focus {
   outline: none;
-  border-color: #240370;
+  border-color: #6a7003;
   background-color: #e0d4fd;
 }
 
 .control-group {
   display: flex;
   column-gap: 1rem;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .control-group .form-control {
@@ -79,8 +80,16 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled,
+button:hover,
+button:active {
+  background-color: grey;
+  border-color: black;
+  color: black;
+}
+
 .form-actions {
-  text-align: right;
+  text-align: center;
 }
 
 .form-actions button {
